<resources>
    <string name="tee_yellow_name">Yellow</string>
    <string name="tee_black_name">Black</string>
    <string name="tee_blue_name">Blue</string>
    <string name="tee_white_name">White</string>
    <string name="tee_red_name">Red</string>
    <string name="tee_purple_name">Purple</string>
    <string name="tee_green_name">Green</string>
    <string name="tee_orange_name">Orange</string>
    <string name="app_name">The Golf Scorecard</string>
    <string name="bottom_navigation_games">Games</string>
    <string name="bottom_navigation_players">Players</string>
    <string name="bottom_navigation_courses">Courses</string>
    <string name="bottom_navigation_new_game">New Game</string>

    <string name="game_date">Date</string>

    <string name="course_resort">Resort</string>
    <string name="course_name">Name</string>
    <string name="course_city">City</string>
    <string name="course_country">Country</string>
    <string name="course_holes">Holes</string>
    <string name="course_tees">Tees</string>
    <string name="course_tees_size">Tees</string>

    <string name="create_player_button_label">Create Player</string>
    <string name="create_course_button_label">Create New Course</string>
    <string name="create_tee_button_label">Add New Tee</string>
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="delete_button_label">Delete</string>
    <string name="edit_button_label">Edit</string>
    <string name="pick_color_label">Pick a tee color</string>
    <string name="start_game_button_label">Start a new game</string>

    <string name="player_name">Name</string>
    <string name="player_surname">Surname</string>

    <string name="hcp" translatable="false">HCP</string>
    <string name="par" translatable="false">PAR</string>

    <string name="tee_name">Tee Name</string>
    <string name="tee_cr">CR</string>
    <string name="tee_sr">SR</string>
    <string name="tee_color">Tee Color</string>

    <string name="dummy_text">Dummy Text</string>
</resources>