<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditPlayerFragment"
        android:orientation="vertical"
        android:background="@color/black">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:hint="@string/player_name">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:hint="@string/player_surname">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:hint="@string/hcp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hcp_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                style="@style/Widget.Scorecard.Button.DeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/cancel_button"
                android:layout_marginEnd="12dp"
                android:visibility="gone"
                android:text="@string/delete_button_label"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/save_button"
                android:layout_marginEnd="12dp"
                android:text="@string/cancel_button_label"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="6dp"
                android:text="@string/save_button_label"/>
    </RelativeLayout>
</LinearLayout>