<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditCourseFragment"
        android:orientation="vertical"
        android:background="@color/black">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/course_resort">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/course_resort_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/course_name">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/course_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/course_city">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/course_city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/course_country">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/course_country_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="PAR"
                    android:layout_margin="6dp"/>
            <include
                    layout="@layout/holes_input_table"
                    android:id="@+id/course_par_table"/>
            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HCP"
                    android:layout_margin="6dp"/>
            <include
                    layout="@layout/holes_input_table"
                    android:id="@+id/course_hcp_table"/>
            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/dummy_text"
                    android:visibility="invisible"
                    android:id="@+id/error_message_text_view"/>
            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_tees"
                    android:layout_margin="6dp"/>

            <include layout="@layout/course_tees_section"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/cancel_button"
                android:layout_marginEnd="12dp"
                android:visibility="gone"
                android:text="@string/delete_button_label"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/save_button"
                android:layout_marginEnd="12dp"
                android:text="@string/cancel_button_label"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="6dp"
                android:text="@string/save_button_label"/>
    </RelativeLayout>
</LinearLayout>