<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg"
        tools:context=".CoursesActivity">

    <Button
            android:text="@string/new_course_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_course_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/bottom_button_margin"
            android:onClick="createCourse"/>

    <HorizontalScrollView
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/create_course_button"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp">

        <TableLayout
                android:layout_width="wrap_content"
                android:id="@+id/coursesTable"
                android:layout_height="wrap_content"
                android:background="@color/table_bg"
                android:clickable="false"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp">

            <TableRow
                    android:layout_marginBottom="2dp"
                    android:id="@+id/headerRow"
                    >

                <TextView
                        android:text="@string/course_resort"
                        android:id="@+id/courseHeader"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:background="@color/table_header_bg"
                        android:textColor="@color/table_header_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="@string/course_name"
                        android:id="@+id/nameHeader"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:background="@color/table_header_bg"
                        android:textColor="@color/table_header_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="@string/course_city"
                        android:id="@+id/cityHeader"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:background="@color/table_header_bg"
                        android:textColor="@color/table_header_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="@string/course_country"
                        android:id="@+id/countryHeader"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:background="@color/table_header_bg"
                        android:textColor="@color/table_header_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="@string/course_holes"
                        android:id="@+id/holesHeader"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:background="@color/table_header_bg"
                        android:textColor="@color/table_header_text"
                        android:layout_marginStart="2dp"/>
            </TableRow>

            <TableRow
                    android:background="#FFFFFF">

                <TextView
                        android:text="Penaty Golf Resort"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="textStart"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:textColor="@color/table_value_text"
                        android:layout_marginStart="2dp"
                        />

                <TextView
                        android:text="Legend"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="textStart"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:textColor="@color/table_value_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="Sajdikove Humence"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="textStart"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:textColor="@color/table_value_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="SK"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:textColor="@color/table_value_text"
                        android:layout_marginStart="2dp"/>

                <TextView
                        android:text="18"
                        android:textSize="@dimen/table_header_size"
                        android:textAlignment="center"
                        android:paddingStart="4sp"
                        android:paddingEnd="4sp"
                        android:paddingLeft="4sp"
                        android:paddingRight="4sp"
                        android:paddingTop="4sp"
                        android:paddingBottom="4sp"
                        android:padding="4sp"
                        android:textColor="@color/table_value_text"
                        android:layout_marginStart="2dp"/>
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>